<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/card_style"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_card_resumo"
            style="@style/chip_parceiro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/chip_text"
            app:chipCornerRadius="18dp"
            app:chipIcon="@drawable/ic_logobranco"
            app:chipIconSize="24dp"
            app:iconEndPadding="16dp"
            app:iconStartPadding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_objetivo_semente_card_resumo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/ubuntu"
            android:text="@string/objetivo_semente"
            android:textColor="#47DA2A"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chip_card_resumo" />

        <TextView
            android:id="@+id/text_descricao1_card_resumo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/card_resumo_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_objetivo_semente_card_resumo" />

        <TextView
            android:id="@+id/text_objetivo_card_resumo"
            style="@style/title_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/card_resumo_objetivo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_descricao1_card_resumo" />

        <TextView
            android:id="@+id/text_descricao2_card_resumo"
            style="@style/descricao_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/card_resumo_title2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_objetivo_card_resumo" />

        <TextView
            android:id="@+id/text_ate_card_resumo"
            style="@style/descricao_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/card_resumo_ate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_descricao2_card_resumo" />

        <TextView
            android:id="@+id/text_semana_inicio_card_resumo"
            style="@style/descricao_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_resumo_semana_inicio"
            app:layout_constraintBaseline_toBaselineOf="@+id/text_ate_card_resumo"
            app:layout_constraintEnd_toStartOf="@+id/text_ate_card_resumo"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_semana_fim_card_resumo"
            style="@style/descricao_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_resuno_semana_fim"
            app:layout_constraintBaseline_toBaselineOf="@+id/text_ate_card_resumo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_ate_card_resumo" />

        <TextView
            android:id="@+id/text_data_inicio_card_resumo"
            style="@style/descricao_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_resumo_data_inicio"
            app:layout_constraintBaseline_toBaselineOf="@+id/text_data_fim_card_resumo"
            app:layout_constraintEnd_toStartOf="@+id/text_ate_card_resumo"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView11"
            style="@style/descricao_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/card_resumo_valor_inicio"
            app:layout_constraintEnd_toStartOf="@+id/text_ate_card_resumo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_data_inicio_card_resumo" />

        <TextView
            style="@style/descricao_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_resumo_valor_fim"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_ate_card_resumo" />

        <TextView
            android:id="@+id/text_data_fim_card_resumo"
            style="@style/descricao_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/card_resumo_data_fim"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_ate_card_resumo"
            app:layout_constraintTop_toBottomOf="@+id/text_semana_fim_card_resumo" />

        <TextView
            android:id="@+id/textView9"
            style="@style/descricao_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/card_resumo_total_texto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <TextView
            android:id="@+id/textView10"
            style="@style/title_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/card_resumo_valor_total"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>